--- a/index.html
+++ b/index.html
@@ -1,96 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Arch Studio Website Challenge</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Arch Studio</title>
+  </head>
+  <body>
+    <div class="sidebar">
+      Home
+    </div>
+    <header>
+      <div class="container">
+        <nav class="nav">
+          <a href="./portfolio.html">
+            Portfolio
+          </a>
+          <a href="./about.html">
+            About Us
+          </a>
+          <a href="./contact.html">
+            Contact
+          </a>
+        </nav>
+      </div>
+    </header>
 
-  Home
+    <main>
+      <div class="hero">
+        <div class="container">
+          <div class="project">
+            <div class="project--container">
+              <h2 class="project--title">
+                Project Paramour
+              </h2>
+              <p class="project--text">
+                Project made for an art museum near Southwest London. Project
+                Paramour is a statement of bold, modern architecture.
+              </p>
+              <a href="./portfolio.html">
+                <button class="btn">
+                  See Our Portfolio
+                </button>
+              </a>
+            </div>
+          </div>
 
-  Portfolio
-  About Us
-  Contact
+          <div class="project">
+            <div class="project--container">
+              <h2 class="project--title">
+                Seraph Station
+              </h2>
+              <p class="project--text">
+                The Seraph Station project challenged us to design a unique
+                station that would transport people through time. The result is
+                a fresh and futuristic model inspired by space stations.
+              </p>
+              <a href="./portfolio.html">
+                <button class="btn-dark">
+                  See Our Portfolio
+                </button>
+              </a>
+            </div>
+          </div>
 
-  Project Paramour
+          <div class="project">
+            <div class="project--container">
+              <h2 class="project--title">
+                Federal II Tower
+              </h2>
+              <p class="project--text">
+                A sequel theme project for a tower originally built in the
+                1800s. We achieved this with a striking look of brutal
+                minimalism with modern touches.
+              </p>
+              <a href="./portfolio.html">
+                <button class="btn">
+                  See Our Portfolio
+                </button>
+              </a>
+            </div>
+          </div>
 
-  Project made for an art museum near Southwest London. Project Paramour is 
-  a statement of bold, modern architecture.
+          <div class="project">
+            <div class="project--container">
+              <h2 class="project--title">
+                Trinity Bank Tower
+              </h2>
+              <p class="project--title">
+                Trinity Bank challenged us to make a concept for a 84 story
+                building located in the middle of a city with a high earthquake
+                frequency. For this project we used curves to blend design and
+                stability to meet our objectives.
+              </p>
+              <a href="./portfolio.html">
+                <button class="btn">
+                  See Our Portfolio
+                </button>
+              </a>
+            </div>
+          </div>
+          <div class="btn-group">
+            <div class="btn">
+              01
+            </div>
+            <div class="btn">
+              02
+            </div>
+            <div class="btn">
+              03
+            </div>
+            <div class="btn">
+              04
+            </div>
+          </div>
+        </div>
+      </div>
 
-  See Our Portfolio
+      <div class="welcome">
+        <div class="container">
+          <h1 class="welcome--title">
+            Welcome
+          </h1>
+          <div class="welcome--content">
+            <h2 class="welcome--subtitile">
+              Welcome to Arch Studio
+            </h2>
+            <p class="welcome--text">
+              We have a unique network and skillset to help bring your projects
+              to life. Our small team of highly skilled individuals combined
+              with our large network put us in a strong position to deliver
+              exceptional results.
+            </p>
+            <p class="welcome--text">
+              Over the past 10 years, we have worked on all kinds of projects.
+              From stations to high-rise buildings, we create spaces that
+              inspire and delight.
+            </p>
+            <p class="welcome--text">
+              We work closely with our clients so that we understand the
+              intricacies of each project. This allows us to work in harmony the
+              surrounding area to create truly stunning projects that will stand
+              the test of time.
+            </p>
+          </div>
+        </div>
+      </div>
 
-  Seraph Station
+      <div class="team">
+        <div class="container">
+          <h2 class="team--title">
+            Small team, big ideas
+          </h2>
+          <a href="./about.html">
+            <button class="btn">
+              About Us
+            </button>
+          </a>
+        </div>
+      </div>
 
-  The Seraph Station project challenged us to design a unique station that would 
-  transport people through time. The result is a fresh and futuristic model 
-  inspired by space stations.
+      <div class="featured">
+        <div class="container">
+          <h2 class="featured--title">
+            Featured
+          </h2>
+          <button class="btn">
+            See all
+          </button>
 
-  See Our Portfolio
+          <a href="./portfolio.html">
+            <div class="featured--project">
+              <div class="featured--project-num">
+                1
+              </div>
+              <h3 class="featured--project-title">
+                Project Del Sol
+              </h3>
+              <p class="featured--project-cta">
+                View All Projects
+              </p>
+            </div>
+          </a>
 
-  Federal II Tower
+          <a href="./portfolio.html">
+            <div class="featured--project">
+              <div class="featured--project-num">
+                2
+              </div>
+              <h3 class="featured--project-title">
+                228B Tower
+              </h3>
+              <p class="featured--project-cta">
+                View All Projects
+              </p>
+            </div>
+          </a>
+          <div class="featured--project">
+            <div class="featured--project-num">
+              3
+            </div>
+            <h3 class="featured--project-title">
+              Le Prototype
+            </h3>
+            <p class="featured--project-cta">
+              View All Projects
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
 
-  A sequel theme project for a tower originally built in the 1800s. We achieved 
-  this with a striking look of brutal minimalism with modern touches.
-  
-  See Our Portfolio
-
-  Trinity Bank Tower
-
-  Trinity Bank challenged us to make a concept for a 84 story building located 
-  in the middle of a city with a high earthquake frequency. For this project we 
-  used curves to blend design and stability to meet our objectives.
-
-  See Our Portfolio
-
-  01
-  02
-  03
-  04
-
-  Welcome
-
-  Welcome to Arch Studio
-
-  We have a unique network and skillset to help bring your projects to life. Our 
-  small team of highly skilled individuals combined with our large network put us 
-  in a strong position to deliver exceptional results.
-
-  Over the past 10 years, we have worked on all kinds of projects. From stations 
-  to high-rise buildings, we create spaces that inspire and delight.
-
-  We work closely with our clients so that we understand the intricacies of each 
-  project. This allows us to work in harmony the surrounding area to create truly 
-  stunning projects that will stand the test of time.
-
-  Small team, big ideas
-
-  About Us
-
-  Featured
-
-  See all
-
-  1
-  Project Del Sol
-  View All Projects
-
-  2
-  228B Tower
-  View All Projects
-
-  3
-  Le Prototype
-  View All Projects
-
-  Portfolio
-  About Us
-  Contact
-
-  See Our Portfolio
-
-</body>
+    <footer>
+      <div class="container">
+        <nav class="footer--nav">
+          <a href="./portfolio.html">
+            Portfolio
+          </a>
+          <a href="./about.html">
+            About Us
+          </a>
+          <a href="./contact.html">
+            Contact
+          </a>
+          <button class="btn">
+            See Our Portfolio
+          </button>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
