--- a/about.html
+++ b/about.html
@@ -1,60 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Arch Studio Website Challenge</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
 
-  About Us
+    <title>Arch Studio | About</title>
+  </head>
+  <body>
+    <div class="sidebar">
+      About Us
+    </div>
+    <header>
+      <div class="nav-group">
+        <a href="./index.html">
+          <img class="logo" src="./assets/logo.svg" alt="" />
+        </a>
+        <button class="menu-btn">
+          <img src="./assets/icons/icon-hamburger.svg" alt="" />
+        </button>
+      </div>
+      <nav class="nav">
+        <a class="nav--link" href="./portfolio.html">
+          Portfolio
+        </a>
+        <a class="nav--link" href="./about.html">
+          About Us
+        </a>
+        <a class="nav--link" href="./contact.html">
+          Contact
+        </a>
+      </nav>
+    </header>
 
-  Portfolio
-  About Us
-  Contact
+    <main>
+      <div class="team">
+        <div class="container-outer">
+          <h1 class="page--title">
+            About
+          </h1>
+          <h3 class="about--subtitle">
+            Your team of professionals
+          </h3>
+          <p>
+            Our small team of world-class professionals will work with you every
+            step of the way. Strong relationships are at the core of everything
+            we do. This extends to the relationship our projects have with their
+            surroundings.
+          </p>
+        </div>
+      </div>
 
-  About
+      <div class="heritage">
+        <h3 class="about--subtitle">
+          Our Heritage
+        </h3>
+        <p>
+          Founded in 2007, we started as a trio of architects. Our complimentary
+          skills and relentless attention to detail turned Arch into one of the
+          most sought after boutique firms in the country.
+        </p>
+        <p>
+          Speciliazing in Urban Design allowed us to focus on creating
+          exceptional structures that live in harmony with their surroundings.
+          We consider every detail from every surrounding element to inform our
+          designs.
+        </p>
+        <p>
+          Our small team of world-class professionals provides input on every
+          project.
+        </p>
+      </div>
 
-  Your team of professionals
+      <div class="leaders">
+        <h3 class="about--subtitle">
+          The Leaders
+        </h3>
+        <div class="leader-card">
+          <h4>
+            Jake Richards
+          </h4>
+          <p>
+            Chief Architect
+          </p>
+        </div>
 
-  Our small team of world-class professionals will work with you every step of the way. 
-  Strong relationships are at the core of everything we do. This extends to the 
-  relationship our projects have with their surroundings.
+        <div class="leader-card">
+          <h4>
+            Thompson Smith
+          </h4>
+          <p>
+            Head of Finance
+          </p>
+        </div>
 
-  Our Heritage
+        <div class="leader-card">
+          <h4>
+            Jackson Rourke
+          </h4>
+          <p>
+            Lead Designer
+          </p>
+        </div>
 
-  Founded in 2007, we started as a trio of architects. Our complimentary skills and 
-  relentless attention to detail turned Arch into one of the most sought after boutique 
-  firms in the country.
-
-  Speciliazing in Urban Design allowed us to focus on creating exceptional structures that 
-  live in harmony with their surroundings. We consider every detail from every surrounding 
-  element to inform our designs. 
-
-  Our small team of world-class professionals provides input on every project.
-
-  The Leaders
-
-  Jake Richards
-  Chief Architect
-
-  Thompson Smith
-  Head of Finance
-
-  Jackson Rourke
-  Lead Designer
-
-  Maria Simpson
-  Senior Architect
-
-  Portfolio
-  About Us
-  Contact
-
-  See Our Portfolio
-
-</body>
+        <div class="leader-card">
+          <h4>
+            Maria Simpson
+          </h4>
+          <p>
+            Senior Architect
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="footer--logo">
+          <img src="./assets/logo.svg" alt="" />
+        </div>
+        <nav class="footer--nav">
+          <a class="nav--link" href="./portfolio.html">
+            Portfolio
+          </a>
+          <a class="nav--link" href="./about.html">
+            About Us
+          </a>
+          <a class="nav--link" href="./contact.html">
+            Contact
+          </a>
+          <button class="btn">
+            See Our Portfolio
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" class="icon-arrow" />
+              </g>
+            </svg>
+          </button>
+        </nav>
+      </div>
+    </footer>
+    <script src="./script.js"></script>
+  </body>
 </html>
