markup for contact page added

--- a/about.html
+++ b/about.html
@@ -46,12 +46,13 @@
     </header>
 
     <main>
-      <div class="team">
+      <div class="modal"></div>
+      <div class="page--intro">
         <div class="container-outer">
           <h1 class="page--title">
             About
           </h1>
-          <h3 class="about--subtitle">
+          <h3 class="page--subtitle">
             Your team of professionals
           </h3>
           <p>
@@ -64,7 +65,7 @@
       </div>
 
       <div class="heritage">
-        <h3 class="about--subtitle">
+        <h3 class="page--subtitle">
           Our Heritage
         </h3>
         <p>
@@ -85,7 +86,7 @@
       </div>
 
       <div class="leaders">
-        <h3 class="about--subtitle">
+        <h3 class="page--subtitle">
           The Leaders
         </h3>
         <div class="leader-card">
