--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             Welcome
           </h1>
           <div class="welcome--content container-inner">
-            <h3 class="welcome--subtitile">
+            <h3 class="page--subtitle">
               Welcome to Arch Studio
             </h3>
             <p class="welcome--text">
@@ -235,7 +235,7 @@
       <div class="team">
         <div class="container-outer">
           <div class="container-inner">
-            <h3 class="team--title">
+            <h3 class="page--subtitle">
               Small team, big ideas
             </h3>
             <a href="./about.html">
@@ -260,7 +260,7 @@
       <div class="featured">
         <div class="container-outer">
           <div class="featured-container">
-            <h3 class="featured--title">
+            <h3 class="page--subtitle">
               Featured
             </h3>
             <button class="btn">
