--- a/contact.html
+++ b/contact.html
@@ -1,57 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Arch Studio Website Challenge</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
 
-  Contact
+    <title>Arch Studio | Contact</title>
+  </head>
+  <body>
+    <div class="sidebar">
+      Contact
+    </div>
+    <header>
+      <div class="nav-group">
+        <a href="./index.html">
+          <img class="logo" src="./assets/logo.svg" alt="" />
+        </a>
+        <button class="menu-btn">
+          <img src="./assets/icons/icon-hamburger.svg" alt="" />
+        </button>
+      </div>
+      <nav class="nav">
+        <a class="nav--link" href="./portfolio.html">
+          Portfolio
+        </a>
+        <a class="nav--link" href="./about.html">
+          About Us
+        </a>
+        <a class="nav--link" href="./contact.html">
+          Contact
+        </a>
+      </nav>
+    </header>
+    <main>
+      <div class="modal"></div>
+      <div class="page--intro">
+        <h1 class="page--title">
+          Contact
+        </h1>
+        <h3 class="page--subtitle">
+          Tell us about your project
+        </h3>
+        <p>
+          We’d love to hear more about your project. Please, leave a message
+          below or give us a call. We have two offices, one in Texas and one in
+          Tennessee. If you find yourself nearby, come say hello!
+        </p>
+      </div>
 
-  Portfolio
-  About Us
-  Contact
+      <div class="contact-details">
+        <h3 class="page--subtitle">
+          Contact Details
+        </h3>
 
-  Contact
+        <div class="office-address">
+          <div class="address-group">
+            <h5>
+              Main Office
+            </h5>
+            <p>
+              Mail: archone@mail.com
+            </p>
+            <p>
+              Address: 1892 Chenoweth Drive TN
+            </p>
+            <p>
+              Phone: 123-456-3451
+            </p>
+          </div>
+          <button class="btn">
+            View on Map
+          </button>
+        </div>
 
-  Tell us about your project
+        <div class="office-addess">
+          <h5>
+            Office II
+          </h5>
+          <p>
+            Mail: archtwo@mail.com
+          </p>
+          <p>
+            Address: 3399 Wines Lane TX
+          </p>
+          <p>
+            Phone: 832-123-4321
+          </p>
 
-  We’d love to hear more about your project. Please, leave a message below or give 
-  us a call. We have two offices, one in Texas and one in Tennessee. If you find 
-  yourself nearby, come say hello!
+          <button class="btn">
+            View on Map
+          </button>
+        </div>
+      </div>
 
-  Contact Details
+      <!-- MAP GOES HERE -->
 
-  Main Office
-  Mail:	archone@mail.com
-  Address: 1892 Chenoweth Drive TN
-  Phone: 123-456-3451
-
-  View on Map
-
-  Office II
-  Mail: archtwo@mail.com
-  Address: 3399 Wines Lane TX
-  Phone: 832-123-4321
-
-  View on Map
-
-  Connect with us
-
-  Name
-  Email
-  Message
-
-
-  Portfolio
-  About Us
-  Contact
-
-  See Our Portfolio
-
-</body>
+      <div class="contact-form">
+        <h3 class="page--subtitle">
+          Connect with us
+        </h3>
+        <input type="text" placeholder="Name" />
+        <input type="email" name="" id="" placeholder="Email" />
+        <textarea name="" id="" cols="30" rows="10" placeholder="Message">
+        </textarea>
+        <button class="btn">
+          arrow
+        </button>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="footer--logo">
+          <img src="./assets/logo.svg" alt="" />
+        </div>
+        <nav class="footer--nav">
+          <a class="nav--link" href="./portfolio.html">
+            Portfolio
+          </a>
+          <a class="nav--link" href="./about.html">
+            About Us
+          </a>
+          <a class="nav--link" href="./contact.html">
+            Contact
+          </a>
+          <button class="btn">
+            See Our Portfolio
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" class="icon-arrow" />
+              </g>
+            </svg>
+          </button>
+        </nav>
+      </div>
+    </footer>
+    <script src="./script.js"></script>
+  </body>
 </html>
