footer styling for mobile

--- a/about.html
+++ b/about.html
@@ -20,9 +20,7 @@
     <title>Arch Studio | About</title>
   </head>
   <body>
-    <div class="sidebar">
-      About Us
-    </div>
+    <div class="sidebar">About Us</div>
     <header>
       <div class="nav-group">
         <a href="./index.html">
@@ -33,15 +31,9 @@
         </button>
       </div>
       <nav class="nav">
-        <a class="nav--link" href="./portfolio.html">
-          Portfolio
-        </a>
-        <a class="nav--link" href="./about.html">
-          About Us
-        </a>
-        <a class="nav--link" href="./contact.html">
-          Contact
-        </a>
+        <a class="nav--link" href="./portfolio.html"> Portfolio </a>
+        <a class="nav--link" href="./about.html"> About Us </a>
+        <a class="nav--link" href="./contact.html"> Contact </a>
       </nav>
     </header>
 
@@ -49,12 +41,8 @@
       <div class="modal"></div>
       <div class="page--intro">
         <div class="container-outer">
-          <h1 class="page--title">
-            About
-          </h1>
-          <h3 class="page--subtitle">
-            Your team of professionals
-          </h3>
+          <h1 class="page--title">About</h1>
+          <h3 class="page--subtitle">Your team of professionals</h3>
           <p>
             Our small team of world-class professionals will work with you every
             step of the way. Strong relationships are at the core of everything
@@ -65,9 +53,7 @@
       </div>
 
       <div class="heritage">
-        <h3 class="page--subtitle">
-          Our Heritage
-        </h3>
+        <h3 class="page--subtitle">Our Heritage</h3>
         <p>
           Founded in 2007, we started as a trio of architects. Our complimentary
           skills and relentless attention to detail turned Arch into one of the
@@ -86,61 +72,36 @@
       </div>
 
       <div class="leaders">
-        <h3 class="page--subtitle">
-          The Leaders
-        </h3>
+        <h3 class="page--subtitle">The Leaders</h3>
         <div class="leader-card">
-          <h4>
-            Jake Richards
-          </h4>
-          <p>
-            Chief Architect
-          </p>
+          <h4>Jake Richards</h4>
+          <p>Chief Architect</p>
         </div>
 
         <div class="leader-card">
-          <h4>
-            Thompson Smith
-          </h4>
-          <p>
-            Head of Finance
-          </p>
+          <h4>Thompson Smith</h4>
+          <p>Head of Finance</p>
         </div>
 
         <div class="leader-card">
-          <h4>
-            Jackson Rourke
-          </h4>
-          <p>
-            Lead Designer
-          </p>
+          <h4>Jackson Rourke</h4>
+          <p>Lead Designer</p>
         </div>
 
         <div class="leader-card">
-          <h4>
-            Maria Simpson
-          </h4>
-          <p>
-            Senior Architect
-          </p>
+          <h4>Maria Simpson</h4>
+          <p>Senior Architect</p>
         </div>
       </div>
     </main>
+
     <footer>
-      <div class="container">
-        <div class="footer--logo">
-          <img src="./assets/logo.svg" alt="" />
-        </div>
+      <div class="footer--container">
+        <img src="./assets/logo-footer.svg" class="footer--logo" alt="" />
         <nav class="footer--nav">
-          <a class="nav--link" href="./portfolio.html">
-            Portfolio
-          </a>
-          <a class="nav--link" href="./about.html">
-            About Us
-          </a>
-          <a class="nav--link" href="./contact.html">
-            Contact
-          </a>
+          <a class="nav--link" href="./portfolio.html"> Portfolio </a>
+          <a class="nav--link" href="./about.html"> About Us </a>
+          <a class="nav--link" href="./contact.html"> Contact </a>
           <button class="btn">
             See Our Portfolio
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
