--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <title>Arch Studio | Home</title>
   </head>
   <body>
-    <div class="sidebar">
-      Home
-    </div>
+    <div class="sidebar">Home</div>
     <header>
       <div class="nav-group">
         <a href="./index.html">
@@ -32,15 +30,9 @@
         </button>
       </div>
       <nav class="nav">
-        <a class="nav--link" href="./portfolio.html">
-          Portfolio
-        </a>
-        <a class="nav--link" href="./about.html">
-          About Us
-        </a>
-        <a class="nav--link" href="./contact.html">
-          Contact
-        </a>
+        <a class="nav--link" href="./portfolio.html"> Portfolio </a>
+        <a class="nav--link" href="./about.html"> About Us </a>
+        <a class="nav--link" href="./contact.html"> Contact </a>
       </nav>
     </header>
 
@@ -50,9 +42,7 @@
         <div class="container-outer">
           <div class="project project-paramour">
             <div class="project--container container-inner">
-              <h2 class="project--title">
-                Project Paramour
-              </h2>
+              <h2 class="project--title">Project Paramour</h2>
               <p class="project--text">
                 Project made for an art museum near Southwest London. Project
                 Paramour is a statement of bold, modern architecture.
@@ -123,9 +113,7 @@
 
           <div class="project project-federal">
             <div class="project--container container-inner">
-              <h2 class="project--title">
-                Federal II Tower
-              </h2>
+              <h2 class="project--title">Federal II Tower</h2>
               <p class="project--text">
                 A sequel theme project for a tower originally built in the
                 1800s. We achieved this with a striking look of brutal
@@ -155,9 +143,7 @@
 
           <div class="project project-trinity">
             <div class="project--container container-inner">
-              <h2 class="project--title">
-                Trinity Bank Tower
-              </h2>
+              <h2 class="project--title">Trinity Bank Tower</h2>
               <p class="project--text">
                 Trinity Bank challenged us to make a concept for a 84 story
                 building located in the middle of a city with a high earthquake
@@ -186,31 +172,19 @@
             </div>
           </div>
           <div class="btn-group">
-            <div class="btn">
-              01
-            </div>
-            <div class="btn">
-              02
-            </div>
-            <div class="btn">
-              03
-            </div>
-            <div class="btn">
-              04
-            </div>
+            <div class="btn">01</div>
+            <div class="btn">02</div>
+            <div class="btn">03</div>
+            <div class="btn">04</div>
           </div>
         </div>
       </div>
 
       <div class="welcome">
         <div class="container-outer">
-          <h1 class="page--title">
-            Welcome
-          </h1>
+          <h1 class="page--title">Welcome</h1>
           <div class="welcome--content container-inner">
-            <h3 class="page--subtitle">
-              Welcome to Arch Studio
-            </h3>
+            <h3 class="page--subtitle">Welcome to Arch Studio</h3>
             <p class="welcome--text">
               We have a unique network and skillset to help bring your projects
               to life. Our small team of highly skilled individuals combined
@@ -235,9 +209,7 @@
       <div class="team">
         <div class="container-outer">
           <div class="container-inner">
-            <h3 class="page--subtitle">
-              Small team, big ideas
-            </h3>
+            <h3 class="page--subtitle">Small team, big ideas</h3>
             <a href="./about.html">
               <button class="btn">
                 About Us
@@ -260,9 +232,7 @@
       <div class="featured">
         <div class="container-outer">
           <div class="featured-container">
-            <h3 class="page--subtitle">
-              Featured
-            </h3>
+            <h3 class="page--subtitle">Featured</h3>
             <button class="btn">
               See all
               <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
@@ -283,15 +253,9 @@
                   src="./assets/portfolio/mobile/image-del-sol.jpg"
                   alt="Project Del Sol"
                 />
-                <div class="featured--project-num">
-                  1
-                </div>
-                <h4 class="portfolio--project-title">
-                  Project Del Sol
-                </h4>
-                <p class="portfolio--project-subtitle">
-                  View All Projects
-                </p>
+                <div class="featured--project-num">1</div>
+                <h4 class="portfolio--project-title">Project Del Sol</h4>
+                <p class="portfolio--project-subtitle">View All Projects</p>
               </div>
             </a>
 
@@ -301,15 +265,9 @@
                   src="./assets/portfolio/mobile/image-228b.jpg"
                   alt="228B Tower"
                 />
-                <div class="featured--project-num">
-                  2
-                </div>
-                <h4 class="portfolio--project-title">
-                  228B Tower
-                </h4>
-                <p class="portfolio--project-subtitle">
-                  View All Projects
-                </p>
+                <div class="featured--project-num">2</div>
+                <h4 class="portfolio--project-title">228B Tower</h4>
+                <p class="portfolio--project-subtitle">View All Projects</p>
               </div>
             </a>
 
@@ -319,15 +277,9 @@
                   src="./assets/portfolio/mobile/image-prototype.jpg"
                   alt="Le Prototype"
                 />
-                <div class="portfolio--project-num">
-                  3
-                </div>
-                <h4 class="portfolio--project-title">
-                  Le Prototype
-                </h4>
-                <p class="portfolio--project-subtitle">
-                  View All Projects
-                </p>
+                <div class="portfolio--project-num">3</div>
+                <h4 class="portfolio--project-title">Le Prototype</h4>
+                <p class="portfolio--project-subtitle">View All Projects</p>
               </div>
             </a>
           </div>
@@ -336,20 +288,12 @@
     </main>
 
     <footer>
-      <div class="container">
-        <div class="footer--logo">
-          <img src="./assets/logo.svg" alt="" />
-        </div>
+      <div class="footer--container">
+        <img src="./assets/logo-footer.svg" class="footer--logo" alt="" />
         <nav class="footer--nav">
-          <a class="nav--link" href="./portfolio.html">
-            Portfolio
-          </a>
-          <a class="nav--link" href="./about.html">
-            About Us
-          </a>
-          <a class="nav--link" href="./contact.html">
-            Contact
-          </a>
+          <a class="nav--link" href="./portfolio.html"> Portfolio </a>
+          <a class="nav--link" href="./about.html"> About Us </a>
+          <a class="nav--link" href="./contact.html"> Contact </a>
           <button class="btn">
             See Our Portfolio
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
