--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,7 @@
     <title>Arch Studio | Contact</title>
   </head>
   <body>
-    <div class="sidebar">
-      Contact
-    </div>
+    <div class="sidebar">Contact</div>
     <header>
       <div class="nav-group">
         <a href="./index.html">
@@ -33,26 +31,16 @@
         </button>
       </div>
       <nav class="nav">
-        <a class="nav--link" href="./portfolio.html">
-          Portfolio
-        </a>
-        <a class="nav--link" href="./about.html">
-          About Us
-        </a>
-        <a class="nav--link" href="./contact.html">
-          Contact
-        </a>
+        <a class="nav--link" href="./portfolio.html"> Portfolio </a>
+        <a class="nav--link" href="./about.html"> About Us </a>
+        <a class="nav--link" href="./contact.html"> Contact </a>
       </nav>
     </header>
     <main>
       <div class="modal"></div>
       <div class="page--intro">
-        <h1 class="page--title">
-          Contact
-        </h1>
-        <h3 class="page--subtitle">
-          Tell us about your project
-        </h3>
+        <h1 class="page--title">Contact</h1>
+        <h3 class="page--subtitle">Tell us about your project</h3>
         <p>
           We’d love to hear more about your project. Please, leave a message
           below or give us a call. We have two offices, one in Texas and one in
@@ -61,80 +49,47 @@
       </div>
 
       <div class="contact-details">
-        <h3 class="page--subtitle">
-          Contact Details
-        </h3>
+        <h3 class="page--subtitle">Contact Details</h3>
 
         <div class="office-address">
           <div class="address-group">
-            <h5>
-              Main Office
-            </h5>
-            <p>
-              Mail: archone@mail.com
-            </p>
-            <p>
-              Address: 1892 Chenoweth Drive TN
-            </p>
-            <p>
-              Phone: 123-456-3451
-            </p>
+            <h5>Main Office</h5>
+            <p>Mail: archone@mail.com</p>
+            <p>Address: 1892 Chenoweth Drive TN</p>
+            <p>Phone: 123-456-3451</p>
           </div>
-          <button class="btn">
-            View on Map
-          </button>
+          <button class="btn">View on Map</button>
         </div>
 
         <div class="office-addess">
-          <h5>
-            Office II
-          </h5>
-          <p>
-            Mail: archtwo@mail.com
-          </p>
-          <p>
-            Address: 3399 Wines Lane TX
-          </p>
-          <p>
-            Phone: 832-123-4321
-          </p>
+          <h5>Office II</h5>
+          <p>Mail: archtwo@mail.com</p>
+          <p>Address: 3399 Wines Lane TX</p>
+          <p>Phone: 832-123-4321</p>
 
-          <button class="btn">
-            View on Map
-          </button>
+          <button class="btn">View on Map</button>
         </div>
       </div>
 
       <!-- MAP GOES HERE -->
 
       <div class="contact-form">
-        <h3 class="page--subtitle">
-          Connect with us
-        </h3>
+        <h3 class="page--subtitle">Connect with us</h3>
         <input type="text" placeholder="Name" />
         <input type="email" name="" id="" placeholder="Email" />
         <textarea name="" id="" cols="30" rows="10" placeholder="Message">
         </textarea>
-        <button class="btn">
-          arrow
-        </button>
+        <button class="btn">arrow</button>
       </div>
     </main>
+
     <footer>
-      <div class="container">
-        <div class="footer--logo">
-          <img src="./assets/logo.svg" alt="" />
-        </div>
+      <div class="footer--container">
+        <img src="./assets/logo-footer.svg" class="footer--logo" alt="" />
         <nav class="footer--nav">
-          <a class="nav--link" href="./portfolio.html">
-            Portfolio
-          </a>
-          <a class="nav--link" href="./about.html">
-            About Us
-          </a>
-          <a class="nav--link" href="./contact.html">
-            Contact
-          </a>
+          <a class="nav--link" href="./portfolio.html"> Portfolio </a>
+          <a class="nav--link" href="./about.html"> About Us </a>
+          <a class="nav--link" href="./contact.html"> Contact </a>
           <button class="btn">
             See Our Portfolio
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
