--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Arch Studio | Home</title>
@@ -40,142 +41,175 @@
       <div class="modal"></div>
       <div class="hero">
         <div class="container-outer">
-          <div class="project project-paramour">
-            <div class="project--container container-inner">
-              <h2 class="project--title">Project Paramour</h2>
-              <p class="project--text">
-                Project made for an art museum near Southwest London. Project
-                Paramour is a statement of bold, modern architecture.
-              </p>
-              <a href="./portfolio.html">
-                <button class="btn">
-                  See Our Portfolio
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="26"
-                    height="20"
-                  >
-                    <g
-                      fill="none"
-                      fill-rule="evenodd"
-                      stroke="#1B1D23"
-                      stroke-width="2"
-                    >
-                      <path d="M15 1l9 9-9 9M0 10h24" class="icon-arrow" />
-                    </g>
-                  </svg>
-                </button>
-              </a>
-            </div>
-          </div>
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="project project-paramour">
+                  <div class="project--container container-inner">
+                    <h2 class="project--title">Project Paramour</h2>
+                    <p class="project--text">
+                      Project made for an art museum near Southwest London.
+                      Project Paramour is a statement of bold, modern
+                      architecture.
+                    </p>
+                    <a href="./portfolio.html">
+                      <button class="btn">
+                        See Our Portfolio
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="26"
+                          height="20"
+                        >
+                          <g
+                            fill="none"
+                            fill-rule="evenodd"
+                            stroke="#1B1D23"
+                            stroke-width="2"
+                          >
+                            <path
+                              d="M15 1l9 9-9 9M0 10h24"
+                              class="icon-arrow"
+                            />
+                          </g>
+                        </svg>
+                      </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
 
-          <div class="project project-seraph">
-            <div class="project--container container-inner">
-              <h2 class="project--title">
-                Seraph Station
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
-                  <g
-                    fill="none"
-                    fill-rule="evenodd"
-                    stroke="#1B1D23"
-                    stroke-width="2"
-                  >
-                    <path d="M15 1l9 9-9 9M0 10h24" class="icon-arrow" />
-                  </g>
-                </svg>
-              </h2>
-              <p class="project--text">
-                The Seraph Station project challenged us to design a unique
-                station that would transport people through time. The result is
-                a fresh and futuristic model inspired by space stations.
-              </p>
-              <a href="./portfolio.html">
-                <button class="btn">
-                  See Our Portfolio
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="26"
-                    height="20"
-                  >
-                    <g
-                      fill="none"
-                      fill-rule="evenodd"
-                      stroke="#1B1D23"
-                      stroke-width="2"
-                    >
-                      <path d="M15 1l9 9-9 9M0 10h24" class="icon-arrow" />
-                    </g>
-                  </svg>
-                </button>
-              </a>
-            </div>
-          </div>
+              <div class="swiper-slide">
+                <div class="project project-seraph">
+                  <div class="project--container container-inner">
+                    <h2 class="project--title">
+                      Seraph Station
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="26"
+                        height="20"
+                      >
+                        <g
+                          fill="none"
+                          fill-rule="evenodd"
+                          stroke="#1B1D23"
+                          stroke-width="2"
+                        >
+                          <path d="M15 1l9 9-9 9M0 10h24" class="icon-arrow" />
+                        </g>
+                      </svg>
+                    </h2>
+                    <p class="project--text">
+                      The Seraph Station project challenged us to design a
+                      unique station that would transport people through time.
+                      The result is a fresh and futuristic model inspired by
+                      space stations.
+                    </p>
+                    <a href="./portfolio.html">
+                      <button class="btn">
+                        See Our Portfolio
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="26"
+                          height="20"
+                        >
+                          <g
+                            fill="none"
+                            fill-rule="evenodd"
+                            stroke="#1B1D23"
+                            stroke-width="2"
+                          >
+                            <path
+                              d="M15 1l9 9-9 9M0 10h24"
+                              class="icon-arrow"
+                            />
+                          </g>
+                        </svg>
+                      </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
 
-          <div class="project project-federal">
-            <div class="project--container container-inner">
-              <h2 class="project--title">Federal II Tower</h2>
-              <p class="project--text">
-                A sequel theme project for a tower originally built in the
-                1800s. We achieved this with a striking look of brutal
-                minimalism with modern touches.
-              </p>
-              <a href="./portfolio.html">
-                <button class="btn">
-                  See Our Portfolio
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="26"
-                    height="20"
-                  >
-                    <g
-                      fill="none"
-                      fill-rule="evenodd"
-                      stroke="#1B1D23"
-                      stroke-width="2"
-                    >
-                      <path d="M15 1l9 9-9 9M0 10h24" class="icon-arrow" />
-                    </g>
-                  </svg>
-                </button>
-              </a>
-            </div>
-          </div>
+              <div class="swiper-slide">
+                <div class="project project-federal">
+                  <div class="project--container container-inner">
+                    <h2 class="project--title">Federal II Tower</h2>
+                    <p class="project--text">
+                      A sequel theme project for a tower originally built in the
+                      1800s. We achieved this with a striking look of brutal
+                      minimalism with modern touches.
+                    </p>
+                    <a href="./portfolio.html">
+                      <button class="btn">
+                        See Our Portfolio
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="26"
+                          height="20"
+                        >
+                          <g
+                            fill="none"
+                            fill-rule="evenodd"
+                            stroke="#1B1D23"
+                            stroke-width="2"
+                          >
+                            <path
+                              d="M15 1l9 9-9 9M0 10h24"
+                              class="icon-arrow"
+                            />
+                          </g>
+                        </svg>
+                      </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
 
-          <div class="project project-trinity">
-            <div class="project--container container-inner">
-              <h2 class="project--title">Trinity Bank Tower</h2>
-              <p class="project--text">
-                Trinity Bank challenged us to make a concept for a 84 story
-                building located in the middle of a city with a high earthquake
-                frequency. For this project we used curves to blend design and
-                stability to meet our objectives.
-              </p>
-              <a href="./portfolio.html">
-                <button class="btn">
-                  See Our Portfolio
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="26"
-                    height="20"
-                  >
-                    <g
-                      fill="none"
-                      fill-rule="evenodd"
-                      stroke="#1B1D23"
-                      stroke-width="2"
-                    >
-                      <path d="M15 1l9 9-9 9M0 10h24" class="icon-arrow" />
-                    </g>
-                  </svg>
-                </button>
-              </a>
+              <div class="swiper-slide">
+                <div class="project project-trinity">
+                  <div class="project--container container-inner">
+                    <h2 class="project--title">Trinity Bank Tower</h2>
+                    <p class="project--text">
+                      Trinity Bank challenged us to make a concept for a 84
+                      story building located in the middle of a city with a high
+                      earthquake frequency. For this project we used curves to
+                      blend design and stability to meet our objectives.
+                    </p>
+                    <a href="./portfolio.html">
+                      <button class="btn">
+                        See Our Portfolio
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="26"
+                          height="20"
+                        >
+                          <g
+                            fill="none"
+                            fill-rule="evenodd"
+                            stroke="#1B1D23"
+                            stroke-width="2"
+                          >
+                            <path
+                              d="M15 1l9 9-9 9M0 10h24"
+                              class="icon-arrow"
+                            />
+                          </g>
+                        </svg>
+                      </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="btn-group">
-            <div class="btn">01</div>
-            <div class="btn">02</div>
-            <div class="btn">03</div>
-            <div class="btn">04</div>
+
+            <div class="swiper-pagination"></div>
+
+            <div class="btn-group">
+              <div class="btn">01</div>
+              <div class="btn">02</div>
+              <div class="btn">03</div>
+              <div class="btn">04</div>
+            </div>
           </div>
         </div>
       </div>
@@ -291,9 +325,11 @@
       <div class="footer--container">
         <img src="./assets/logo-footer.svg" class="footer--logo" alt="" />
         <nav class="footer--nav">
-          <a class="nav--link" href="./portfolio.html"> Portfolio </a>
-          <a class="nav--link" href="./about.html"> About Us </a>
-          <a class="nav--link" href="./contact.html"> Contact </a>
+          <div class="footer--nav-container">
+            <a class="nav--link" href="./portfolio.html"> Portfolio </a>
+            <a class="nav--link" href="./about.html"> About Us </a>
+            <a class="nav--link" href="./contact.html"> Contact </a>
+          </div>
           <button class="btn">
             See Our Portfolio
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
@@ -310,6 +346,7 @@
         </nav>
       </div>
     </footer>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
